apps/base/monitoring/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-remote-write
  namespace: monitoring
  labels:
    app: prometheus
    component: core
spec:
  ports:
    - port: 80
      protocol: TCP
      name: web
  selector:
    app: prometheus
    component: core

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
    component: core
spec:
  type: NodePort
  ports:
    - port: 9090
      protocol: TCP
      name: webui
  selector:
    app: prometheus
    component: core
