apps/base/monitoring/prometheus/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.kubecon.demo.traefiklabs.tech`)
      services:
        - name: prometheus
          port: 9090
          namespace: monitoring
  tls: {}
